--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   modbus-server:
     image: python-modbus-server  # dossier contenant le Dockerfile du serveur Modbus
@@ -26,7 +24,7 @@ services:
   
   postgres:
     image: postgres:latest
-    container_name: postgres
+    container_name: postgres2
     restart: always
     environment:
       POSTGRES_USER: admin
